# DenseInferenceWrapper

./: .gitignore  CMakeLists.txt  Makefile  demo.py  readme.md  setup.py
denseinference/: CRFProcessor.py
denseinference/lib/: CMakeLists.txt  Makefile
denseinference/lib/libDenseCRF/: CMakeLists.txt  densecrf.cpp  densecrf.h  permutohedral.h
denseinference/lib/refine_3d/: CMakeLists.txt  dense_inference.cpp  dense_inference.h
denseinference/lib/util/: Timer.h
denseinference/test/: test_CRFProcessor.py  test_dense_inference.py
